adds Sets to the collection topic and renamed files in order to avoid any issue